--- a/sipenas-api/package.json
+++ b/sipenas-api/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "mysql2": "^3.18.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^8.0.1",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4"
